--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 body {
   background-color: rgb(19, 19, 19);
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .lg {
