--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
   transition: transform 0.4s;
   pointer-events: none;
 }
-.img {
+.bg {
   width: 1600px;
   display: flex;
   justify-content: center;
@@ -125,7 +125,7 @@ li a:hover {
   font-size: 68px;
   font-family: Josefin Slab, serif;
   font-weight: bolder;
-  color: rgb(74, 74, 74);
+  color: rgb(0, 110, 110);
 }
 
 .skills {
@@ -143,13 +143,15 @@ li a:hover {
   font-size: 42px;
   font-family: Josefin Slab, serif;
   font-weight: 100;
+  text-align: left;
   color: rgb(100, 100, 100);
 }
-.contact {
-  margin-left: 20%;
-  margin-right: 20%;
-  font-size: 42px;
-  font-family: Josefin Slab, serif;
-  font-weight: 100;
-  color: rgb(100, 100, 100);
+
+a {
+  text-decoration: none;
+  color: rgb(0, 147, 147);
+}
+
+.socials {
+  max-width: 1000%;
 }
